--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.5.0",
+    "@stripe/react-stripe-js": "^2.8.0",
+    "@stripe/stripe-js": "^4.5.0",
     "@tanstack/react-query": "^5.55.4",
     "axios": "^1.7.7",
     "firebase": "^10.13.1",
@@ -28,6 +30,7 @@
     "react-simple-captcha": "^9.3.1",
     "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
+    "stripe": "^16.12.0",
     "sweetalert2": "^11.13.3",
     "swiper": "^11.1.12"
   },
